syntax = "proto3";
package employee.v1;

option go_package = "github.com/wundergraph/openapi-demo/proto";

service EmployeeService {
  rpc MutationUpdateEmployeeMood(MutationUpdateEmployeeMoodRequest) returns (MutationUpdateEmployeeMoodResponse) {}

  rpc QueryFindEmployeesByPets(QueryFindEmployeesByPetsRequest) returns (QueryFindEmployeesByPetsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc QueryFindEmployeesByPetsInlineFragment(QueryFindEmployeesByPetsInlineFragmentRequest) returns (QueryFindEmployeesByPetsInlineFragmentResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc QueryFindEmployeesByPetsNamedFragment(QueryFindEmployeesByPetsNamedFragmentRequest) returns (QueryFindEmployeesByPetsNamedFragmentResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc QueryGetEmployeeById(QueryGetEmployeeByIdRequest) returns (QueryGetEmployeeByIdResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc QueryGetEmployees(QueryGetEmployeesRequest) returns (QueryGetEmployeesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc QueryGetEmployeesWithMood(QueryGetEmployeesWithMoodRequest) returns (QueryGetEmployeesWithMoodResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message QueryGetEmployeeByIdRequest {
  int32 employee_id = 1;
}

message QueryGetEmployeeByIdResponse {
  message Employee {
    message Details {
      message Pets {
        string name = 1;
      }
      message Location {
        message Key {
          string name = 1;
        }
        Key key = 1;
      }
      string forename = 53;
      string surname = 54;
      repeated Pets pets = 57;
      Location location = 58;
    }
    int32 id = 1;
    string tag = 2;
    Details details = 3;
  }
  Employee employee = 1;
}

message QueryFindEmployeesByPetsRequest {
  bool has_pets = 1;
}

message QueryFindEmployeesByPetsResponse {
  message FindEmployees {
    message Details {
      message Pets {
        string name = 1;
      }
      string forename = 53;
      string surname = 54;
      repeated Pets pets = 57;
    }
    int32 id = 1;
    Details details = 2;
  }
  // This is a GraphQL query that retrieves a list of employees.
  repeated FindEmployees find_employees = 1;
}

message QueryGetEmployeesWithMoodRequest {
}

message QueryGetEmployeesWithMoodResponse {
  message Employees {
    message Details {
      message Pets {
        string name = 1;
        Gender gender = 11;
      }
      repeated Pets pets = 57;
    }
    int32 id = 1;
    Details details = 3;
    Mood current_mood = 12;
  }
  repeated Employees employees = 1;
}

message QueryGetEmployeesRequest {
}

message QueryGetEmployeesResponse {
  message Employees {
    message Details {
      string forename = 59;
      string surname = 60;
      bool has_children = 61;
    }
    int32 id = 1;
    Details details = 3;
  }
  repeated Employees employees = 1;
}

message QueryFindEmployeesByPetsInlineFragmentRequest {
  bool has_pets = 1;
}

message QueryFindEmployeesByPetsInlineFragmentResponse {
  message FindEmployees {
    message Details {
      message Pets {
        string name = 1;
      }
      string forename = 59;
      string surname = 60;
      repeated Pets pets = 62;
    }
    int32 id = 1;
    Details details = 2;
  }
  // This is a GraphQL query that retrieves a list of employees.
  repeated FindEmployees find_employees = 1;
}

message QueryFindEmployeesByPetsNamedFragmentRequest {
  bool has_pets = 1;
}

message QueryFindEmployeesByPetsNamedFragmentResponse {
  message FindEmployees {
    message Details {
      message Pets {
        string name = 1;
      }
      string forename = 59;
      string surname = 60;
      repeated Pets pets = 62;
    }
    int32 id = 1;
    Details details = 2;
  }
  // This is a GraphQL query that retrieves a list of employees.
  repeated FindEmployees find_employees = 1;
}

message MutationUpdateEmployeeMoodRequest {
  int32 employee_id = 1;
  Mood mood = 2;
}

message MutationUpdateEmployeeMoodResponse {
  message UpdateMood {
    message Details {
      string forename = 59;
      string surname = 60;
    }
    int32 id = 1;
    Details details = 2;
    Mood current_mood = 3;
    Mood derived_mood = 4;
  }
  // This mutation update the mood of an employee.
  UpdateMood update_mood = 1;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_FEMALE = 1;
  GENDER_MALE = 2;
  GENDER_UNKNOWN = 3;
}

enum Mood {
  MOOD_UNSPECIFIED = 0;
  MOOD_HAPPY = 1;
  MOOD_SAD = 2;
}